# setup

./: .gitignore  .python-version  .template.icns  .zshrc  404.html  LICENSE  README.md  brew.sh  index.html  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml  t.zsh  terminal.sh  vscode_extensions.sh
Automated/: install.sh  manual_installations.sh  terminal.sh  vscode_extensions.sh
New project - LaTeX/: README.md  main.tex  references.bib  test_code.py  title_page.tex
New project - jupyter dash/: gitignore  init_requirements.txt
New project template/: README.md  launch.json  pyproject.toml  requirements.txt
New setup/: .p10k.zsh  .zshrc  README.md  brew.sh  brew_formulas.sh  configure_p10k.sh  constants.sh  fix-zsh-autoswitch-virtualenv.sh  functions.sh  install.sh  manual_installations.sh  notes.sh  terminal.sh  vscode_extensions.sh
New setup - old/: README.md  gitignore  install.sh  terminal.sh
New setup - old/Compare/: .p10k.zsh  .zprofile  .zsh_history  .zshrc
New setup - old/Compare from disk/: .p10k.zsh  .zprofile  .zsh_history  .zshrc  .zshrc.pre-oh-my-zsh
New setup - old/dotfiles/: .warprc
New setup/Files/: .p10k.zsh  .tmux.conf  custom.terminal
New setup/original files/: .p10k.zsh
Templates/: templates.md
automated-setup/: brew.sh  brew_formulas.sh  notes.sh  terminal.sh
docs/: index.md
installation/: index.html
new jupyter dash project/: README.md
new project/: README.md  init_jupyterlab_extensions.txt  init_new.sh  jupyterlab.md
search/: search_index.json
snippets/: index.html
temps/: index.html
usage/: index.html
(+24 files in other folders)
