[tool.poetry]
name = "setup"
version = "0.1.0"
description = ""
authors = ["Lewi Uberg <lewiuberg@icloud.com>"]
maintainers = ["Lewi Uberg <lewiuberg@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"

[tool.poetry.dev-dependencies]
peodd = "^0.2.2"  # Usage: poetry run peodd -o requirements-dev.txt
pytest = "^5.2"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
debugpy = "^1.4.3"
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.9"
mkdocs-macros-plugin = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 79
float_to_top = true
lines_between_types = 0
lines_between_sections = 1
lines_after_imports = 2
force_single_line = false
use_parentheses = true
include_trailing_comma = true
# May be added later: https://pycqa.github.io/isort/docs/configuration/options.html#skip-glob
# src_paths = ["poetry", "tests"]
# skip_glob = ["*/setup.py"]
# filter_files = true
# atomic = true
# known_first_party = "poetry"

[tool.pytest.ini_options]
addopts = "-v"
python_files = "test_*.py"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
